# OSCAppLauncherService

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  OALMidi2osc.cpp  OALSend.cpp  OALServer.cpp
src/include/: OSCSocket.h  WinAppLauncher.hpp  WinOSCSocket.h  application_controller_base.hpp  config.hpp  osc.hpp  platform_base.hpp  socket_base.hpp
src/lib/: config.cpp  osc.cpp
src/platform/: CMakeLists.txt
src/platform/linux/include/: osc_socket.hpp  platform.hpp
src/platform/linux/lib/: platform.cpp
src/platform/win/include/: osc_socket.hpp  platform.hpp
src/platform/win/lib/: platform.cpp
